[package]
name = "blog_it"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = "0.5.1"
actix-web = "3.3.3"
actix-cors = "0.5.4"
serde = "1"
serde_json = "1"
actix-identity = "0.3"
rust-argon2 = "1.0.0"
futures = "0.3.6"
slug = "0.1.4"
rand = "0.8.4"
regex = "1"
env_logger = "0.9.0"
log = "0.4"
jsonwebtoken = "8.0.1"
[dependencies.bson]
version = "2.0.1"
features = ["chrono-0_4"]
[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["async-std-runtime"]
